# AzureMonitor

./: .env.sample  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
azure_monitor/: call_api.py
docs/: index.md
src/azure_monitor/: __init__.py  call_api.py  main.py  mian.py
src/azure_monitor/azure/: utils.py  work_items.py
src/azure_monitor/azure_devops/: work_items.py
src/azure_monitor/core/: config.py  logger.py
src/azure_monitor/db/: db.py  utils.py
src/azure_monitor/db/alembic/: env.py
src/azure_monitor/db/alembic/versions/: 1b2ef673512f_add_created_and_updated.py  6232a7e38a0f_test_migrate.py  836922bd821a_fix_created_and_updated_is_not_.py  c4d2bb0678c0_create_task_table.py  d152c6f150b9_create_issue_table.py  f94cc58e1479_add_issue_title_col.py
src/azure_monitor/db/queries/: issues.py  tasks.py
src/azure_monitor/models/: issue.py  models.py  task.py
src/azure_monitor/models/domain/: issue.py
src/azure_monitor/models/schemas/: base.py
src/azure_monitor/redmine/: main.py
src/azure_monitor/utils/: proxy.py
tests/: test_azure_monitor.py
