[tool.poetry]
name = "azure-monitor"
version = "0.1.0"
description = ""
authors = ["shin-hama <htysivista@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
azure-devops = "^6.0.0-beta.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

